Fix overflowing columns

--- a/assets/styles/claris/_utils.sass
+++ b/assets/styles/claris/_utils.sass
@@ -51,7 +51,7 @@
       // a min width of 0 via minmax
       // grid-template-columns: minmax(#{$screenViewWidthAsideMin}, 1fr) minmax(#{$screenViewColumnWidthMin}, 10fr)
       // grid-template-columns: minmax(#{$screenViewWidthAsideMin}, 1fr) minmax(1px, 10fr)
-      grid-template-columns: minmax(calc(max(env(safe-area-inset-top, 0px), var(--inner_padding-x))), 1fr) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(#{$screenViewColumnWidthWideMin}, #{$screenViewColumnWidthWideMax}) 0px 0px
+      grid-template-columns: minmax(calc(max(env(safe-area-inset-left, 0px), var(--inner_padding-x))), 1fr) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(#{$screenViewColumnWidthWideMin}, #{$screenViewColumnWidthWideMax}) 0px 0px
 
       // grid-column-gap: var(--column-gap)
       grid-template-rows: minmax(min-content, min-content) minmax(min-content, min-content)
@@ -75,7 +75,7 @@
       --column-gap: #{$screenViewColumnGapWide}
       // grid-template-columns: minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(#{$screenViewColumnWidthWideMin}, #{$screenViewColumnWidthWideMax}) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax})
       // grid-template-columns: minmax(#{$screenViewWidthWideAsideMin}, 1fr) minmax(#{$screenViewColumnWidthWideMin}, 4fr) minmax(#{$screenViewWidthWideAsideMin}, 1fr)
-      grid-template-columns: minmax(calc(max(env(safe-area-inset-top, 0px), var(--inner_padding-x))), 1fr) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(#{$screenViewColumnWidthWideMin}, #{$screenViewColumnWidthWideMax}) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(calc(max(env(safe-area-inset-top, 0px), var(--inner_padding-x))), 1fr)
+      grid-template-columns: minmax(calc(max(env(safe-area-inset-left, 0px), var(--inner_padding-x))), 1fr) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(#{$screenViewColumnWidthWideMin}, #{$screenViewColumnWidthWideMax}) minmax(#{$screenViewWidthWideAsideMin}, #{$screenViewWidthWideAsideMax}) minmax(calc(max(env(safe-area-inset-right, 0px), var(--inner_padding-x))), 1fr)
       .article_aside
         grid-column: 2
       .content
